--- a/source/style/common/basic.scss
+++ b/source/style/common/basic.scss
@@ -3,11 +3,13 @@ html {
 }
 *, *:before, *:after {
   box-sizing: inherit;
+  font-size: 16px;
 }
 
 body {
   margin: 0;
   padding: 0;
+  font-family: $font-regular;
 }
 
 .container {
