made header-top and header-logo sections style

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -1,7 +1,7 @@
 
 @import "common/variables";
 @import "common/fonts";
-
 @import "common/basic";
 @import 'common/header';
+@import "common/menu";
 @import "common/tabs";
