--- a/source/template/common/_header.pug
+++ b/source/template/common/_header.pug
@@ -32,7 +32,7 @@ header.page-header
     .header-slider__wrap.container
       h1.header-slider__title Аттестованные эксперты
       p.header-slider__text В области экспертизы промышленной безопасности
-      button.btn(type="button") Отправить заявку
+      button.btn.btn--transparent(type="button") Отправить заявку
 
   .achievements
     .achievements__wrap.container
