--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -2,6 +2,8 @@
 @import "common/variables";
 @import "common/fonts";
 @import "common/basic";
+@import "common/achievements";
+@import "common/button";
 @import 'common/header';
 @import "common/menu";
 @import "common/tabs";
