made directions and services style

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -4,6 +4,8 @@
 @import "common/basic";
 @import "common/achievements";
 @import "common/button";
+@import "common/directions";
+@import "common/services";
 @import 'common/header';
 @import "common/menu";
 @import "common/tabs";
