--- a/source/template/common/_directions.pug
+++ b/source/template/common/_directions.pug
@@ -5,41 +5,52 @@ section.directions
 
     .tabs
       ul.tabs__caption
-        li.tabs__title.active Экспертиза
-        li.tabs__title Проектирование
-        li.tabs__title Строительство
+        li.tabs__caption-item
+          .tab__caption-icon
+          h4.tabs__title.active Экспертиза
+        li.tabs__caption-item
+          .tab__caption-icon
+          h4.tabs__title Проектирование
+        li.tabs__caption-item
+          .tab__caption-icon
+          h4.tabs__title Строительство
       .tabs__content.tabs__content--active
         .tabs__content-wrap
           ul.services
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_2.jpg")
-              p.services__text Экспертиза промышленной безопасности технических устройств (ТУ)
-              button.btn(type="button") Оформить заявку
+              .services__text-wrap
+                p.services__text Экспертиза промышленной безопасности технических устройств (ТУ)
+                button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_3.jpg")
-              p.services__text Экспертиза промышленной безопасности зданий и сооружений
-              button.btn(type="button") Оформить заявку
+              .services__text-wrap
+                p.services__text Экспертиза промышленной безопасности зданий и сооружений
+                button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_5.jpg")
-              p.services__text Промышленное проектирование
-              button.btn(type="button") Оформить заявку
+              .services__text-wrap
+                p.services__text Промышленное проектирование
+                button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_10.jpg")
-              p.services__text Лаборатория неразрушающего контроля
-              button.btn(type="button") Оформить заявку
+              .services__text-wrap
+                p.services__text Лаборатория неразрушающего контроля
+                button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_4.jpg")
-              p.services__text Разработка нормативной документации
-              button.btn(type="button") Оформить заявку
+              .services__text-wrap
+                p.services__text Разработка нормативной документации
+                button.btn.btn--red(type="button") Оформить заявку
 
       .tabs__content
         .tabs__content-wrap
@@ -48,31 +59,31 @@ section.directions
               .services__img-wrap
                 img.services__img(src="assets/img/img_6.jpg")
               p.services__text Разработка проектов и эскизов (жилых домов, коттеджей, промышленных и административных зданий)
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_7.jpg")
               p.services__text Восстановление технической документации (паспортов на техническое оборудование)
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_4.jpg")
               p.services__text Подготовка документации для полечения лицензии на опасных производственных объектах (ОПО)
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_8.jpg")
               p.services__text Составление планов ликвидации аварийных ситуаций (ПЛАС) Разработка проектов производства работ (ППР)
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_9.jpg")
               p.services__text Расчет сметной документации
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
 
       .tabs__content
         .tabs__content-wrap
@@ -81,34 +92,34 @@ section.directions
               .services__img-wrap
                 img.services__img(src="assets/img/img_1.jpg")
               p.services__text Разработка документации
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_2.jpg")
               p.services__text Экспертиза промышленной безопасности технических устройств (ТУ)
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_3.jpg")
               p.services__text Экспертиза промышленной безопасности зданий и сооружений (ЗС)
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_4.jpg")
               p.services__text Экспертиза промышленной безопасности документации (КЛ/ТП)
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_10.jpg")
               p.services__text Лаборатория неразрушабщего контроля
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
 
             li.services__item
               .services__img-wrap
                 img.services__img(src="assets/img/img_5.jpg")
               p.services__text Промышленной проектирование
-              button.btn(type="button") Оформить заявку
+              button.btn.btn--red(type="button") Оформить заявку
