--- a/source/style/common/button.scss
+++ b/source/style/common/button.scss
@@ -15,4 +15,14 @@
     line-height: 18px;
     color: white;
   }
+  &--red {
+    padding: 12px 15px;
+    background-color: #e30613;
+    border-radius: 6px;
+    font-family: $font-semibold;
+    text-transform: uppercase;
+    font-size: 17px;
+    line-height: 19px;
+    color: #ffffff;
+  }
 }
