made features section style, whitout icons

--- a/source/style/common/button.scss
+++ b/source/style/common/button.scss
@@ -16,6 +16,7 @@
     color: white;
   }
   &--red {
+    margin: initial;
     padding: 12px 15px;
     background-color: #e30613;
     border-radius: 6px;
