--- a/source/template/common/_features.pug
+++ b/source/template/common/_features.pug
@@ -1,6 +1,6 @@
 section.features
   .features__wrap.container
-    h3.features__title
+    h3.features__title Преимущества
     ul.features__items
       li.feature
         .feature__icon
@@ -19,5 +19,5 @@ section.features
         h4.feature__title База
         p.feature__text Квалифицированные специалисты и оборудованная лаборатория
 
-    button.btn(type="button") Перейти на наш сайт
+    button.btn.btn--transparent(type="button") Перейти на наш сайт
 
