--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -6,6 +6,7 @@
 @import "common/button";
 @import "common/directions";
 @import "common/services";
+@import "common/features";
 @import 'common/header';
 @import "common/menu";
 @import "common/tabs";
