made form and contacts style

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -1,5 +1,6 @@
 
 @import "common/variables";
+@import "common/mixins";
 @import "common/fonts";
 @import "common/basic";
 @import "common/achievements";
@@ -7,6 +8,10 @@
 @import "common/directions";
 @import "common/services";
 @import "common/features";
+@import "common/clients";
+@import "common/license";
+@import "common/contacts";
+@import "common/form";
 @import 'common/header';
 @import "common/menu";
 @import "common/tabs";
