--- a/source/template/common/_form.pug
+++ b/source/template/common/_form.pug
@@ -1,14 +1,16 @@
 section.form
   .form__wrap.container
+    .form__icon
     h3.form__title Оставьте заявку
     p.form__text и мы свяжемся с вами
 
     form.form-application
-      label.form-application__label
-        input.form-application__input(type="text" name="name" placeholder="Ваше имя*")
-      label.form-application__label
-        input.form-application__input(type="tel" name="phone" placeholder="Ваш телефон*")
-      label.form-application__label
-        input.form-application__input(type="email" name="email" placeholder="Ваш E-mail*")
-      button(type="submit") Оставить заявку
+      .form-application__group
+        label.form-application__label
+          input.form-application__input(type="text" name="name" placeholder="Ваше имя*")
+        label.form-application__label
+          input.form-application__input(type="tel" name="phone" placeholder="Ваш телефон*")
+        label.form-application__label
+          input.form-application__input(type="email" name="email" placeholder="Ваш E-mail*")
+      button.btn.btn--transparent(type="submit") Оставить заявку
 
