added header menu animations

--- a/source/template/common/_header.pug
+++ b/source/template/common/_header.pug
@@ -3,15 +3,15 @@ header.page-header
     .header-top__wrap.container
       nav.menu
         ul.menu__items
-          li.menu__item
+          li.menu__item.hvr-reveal
             a.menu__link(href="#") Главная
-          li.menu__item
+          li.menu__item.hvr-reveal
             a.menu__link(href="#") Услуги
-          li.menu__item
+          li.menu__item.hvr-reveal
             a.menu__link(href="#") Клиенты
-          li.menu__item
+          li.menu__item.hvr-reveal
             a.menu__link(href="#") Лицензии
-          li.menu__item
+          li.menu__item.hvr-reveal
             a.menu__link(href="#") Контакты
 
       .email-address
