--- a/source/style/common/features.scss
+++ b/source/style/common/features.scss
@@ -3,6 +3,7 @@
   padding-bottom: 70px;
   background-image: url(../img/features-bg.jpg);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 .features__title {
   text-align: center;
