--- a/source/style/common/form.scss
+++ b/source/style/common/form.scss
@@ -3,6 +3,7 @@
   padding-bottom: 100px;
   background-image: url(../img/form-bg.jpg);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 .form__title {
   margin: 0;
