added slick slider, image for license slider, and made icon images

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -10,7 +10,9 @@
 @import "common/features";
 @import "common/clients";
 @import "common/license";
+@import "common/slider";
 @import "common/contacts";
+@import "common/page-footer";
 @import "common/form";
 @import 'common/header';
 @import "common/menu";
