--- a/source/style/common/menu.scss
+++ b/source/style/common/menu.scss
@@ -52,7 +52,9 @@
   text-decoration: none;
   text-transform: uppercase;
 }
-
+.email-address {
+  align-self: center;
+}
 .email-adress__link {
   color: #ffffff;
   text-decoration: none;
