--- a/source/template/common/_footer.pug
+++ b/source/template/common/_footer.pug
@@ -1,9 +1,13 @@
 footer.page-footer
   .page-footer__wrap.container
-    .logo.logo--bottom
-      a.logo__link(href="#")
-        img.logo__img(src="assets/img/logo.png")
+    .page-footer__top
+      .logo.logo--bottom
+        a.logo__link(href="#")
+          img.logo__img(src="assets/img/logo-footer.png")
 
-    .map
+      .map
+        .map__wrap
+          a(href="https://yandex.ru/maps/?um=constructor%3AFhZCiaQss7TheotJEJ37rclLKTeWvJsD&amp;source=constructorStatic" target="_blank")
+            img(src="https://api-maps.yandex.ru/services/constructor/1.0/static/?sid=FhZCiaQss7TheotJEJ37rclLKTeWvJsD&amp;width=600&amp;height=256&amp;lang=ru_RU&amp;sourceType=constructor" alt="" style="border: 0;")
     .copyright
       p.copyright__text &#169; 2016 "Экспертно-консультационный центр"
