--- a/source/template/common/_license.pug
+++ b/source/template/common/_license.pug
@@ -1,3 +1,114 @@
 section.license
   .license__wrap.container
     h3.license__title Лицензии
+    .slider
+      .slider__item
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_1.jpg")
+          p.slide__text.
+            Свидетельство о допуске к
+            определенному виду или видам
+            работ, которые оказывают влияние
+            на безопасность объектов
+            капитального строительства
+
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_2.jpg")
+          p.slide__text.
+            Свидетельство о допуске к
+            определенному виду или видам
+            работ, которые оказывают влияние
+            на безопасность объектов
+            капитального строительства
+
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_3.jpg")
+          p.slide__text.
+            Свидетельство о допуске к
+            определенному виду или видам
+            работ, которые оказывают влияние
+            на безопасность объектов
+            капитального строительства
+
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_4.jpg")
+          p.slide__text.
+            Свидетельство о допуске к
+            определенному виду или видам
+            работ, которые оказывают влияние
+            на безопасность объектов
+            капитального строительства
+
+      .slider__item
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_5.jpg")
+          p.slide__text.
+            Свидетельство о допуске к
+            определенному виду или видам
+            работ, которые оказывают влияние
+            на безопасность объектов
+            капитального строительства
+
+
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_6.jpg")
+          p.slide__text.
+            Свидетельство о допуске к
+            определенному виду или видам
+            работ, которые оказывают влияние
+            на безопасность объектов
+            капитального строительства
+
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_7.jpg")
+          p.slide__text.
+            Свидетельство о допуске к
+            определенному виду или видам
+            работ, которые оказывают влияние
+            на безопасность объектов
+            капитального строительства
+
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_8.jpg")
+          p.slide__text.
+            Свидетельство о допуске к
+            определенному виду или видам
+            работ, которые оказывают влияние
+            на безопасность объектов
+            капитального строительства
+
+      .slider__item
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_9.jpg")
+          p.slide__text.
+            Лицензия на осуществление
+            деятельности по проведению
+            экспертизы промыш
+            ленной безопасности
+
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_10.jpg")
+          p.slide__text.
+            Лицензия на осуществление
+            деятельности по проведению
+            экспертизы промыш
+            ленной безопасности
+
+        .slide
+          .slide-img__wrap
+            img.slide-img(src="assets/img/license_11.jpg")
+          p.slide__text.
+            Лицензия на осуществление
+            деятельности по проведению
+            экспертизы промыш
+            ленной безопасности
