--- a/source/style/common/license.scss
+++ b/source/style/common/license.scss
@@ -1,5 +1,7 @@
 .license {
   min-height: 800px;
+  padding-top: 55px;
+  padding-bottom: 55px;
   background-image: url(../img/licenseAndDirections-bg.png);
 }
 .license__title {
