made slider, tabs, button to menu and header and tabs icon

--- a/source/style/common/basic.scss
+++ b/source/style/common/basic.scss
@@ -7,12 +7,37 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-family: $font-regular;
+  min-width: 1155px;
 }
 
 .container {
   margin: 0 auto;
   width: 1155px;
+}
+
+//SCROLL UP BUTTON
+.scroll_up {
+  position:fixed; /*Расположение стрелки на странице: внизу справа с отступами 10рх*/
+  top:auto;
+  bottom:30px;
+  left:auto;
+  right:30px;
+  width: 40px;
+  height: 40px;
+  background-color: #455b7e;
+  &:before {
+    position: absolute;
+    content: '';
+    width: 20px;
+    height: 20px;
+    top: 14px;
+    left: 10px;
+    transform: rotate(45deg);
+    border-left: 3px solid #ffffff;
+    border-top: 3px solid #ffffff;
+
+  }
 }
