--- a/source/style/common/menu.scss
+++ b/source/style/common/menu.scss
@@ -53,9 +53,15 @@
   text-transform: uppercase;
 }
 .email-address {
+  display: flex;
   align-self: center;
 }
 .email-adress__link {
   color: #ffffff;
   text-decoration: none;
+  align-self: center;
+}
+.email-adress__icon {
+  background-position: center center;
+  margin-right: 30px;
 }
