--- a/source/style/common/services.scss
+++ b/source/style/common/services.scss
@@ -14,6 +14,11 @@
 }
 .services__img {
 }
+.services__text-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
 .services__text {
   margin: 0;
   margin-bottom: 13px;
