--- a/source/style/common/tabs.scss
+++ b/source/style/common/tabs.scss
@@ -1,12 +1,45 @@
+.tabs {
+  margin-top: 60px;
+}
 .tabs__caption {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
   margin: 0;
+  margin-bottom: 70px;
   padding: 0;
+}
+.tab__caption-icon {
+  margin-bottom: 25px;
+}
+.tabs__caption-item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 15px;
+  border: 4px solid transparent;
+  border-radius: 10px;
+}
+
+.tabs__caption-item.active {
+  border: 4px solid #002f85;
+  &:after {
+    position: absolute;
+    bottom: -9px;
+    right: calc(50% - 8px);
+    content: '';
+    width: 15px;
+    height: 15px;
+    background-color: #e30613;
+    border-radius: 50%
+  }
 }
 
 .tabs__title {
+  position: relative;
+  display: block;
+  padding: 15px;
   text-decoration: none;
   font-family: $font-semibold;
   font-size: 20px;
@@ -15,8 +48,20 @@
   color: #002f85;
   cursor: pointer;
 }
+
+
+
 .tabs__content {
   display: none;
+}
+.tabs__content-container {
+  width: 770px;
+  min-height: 1085px;
+  margin: 0 auto;
+  padding: 40px 0 180px 0;
+  background:  url(../img/tabs_list-bg.png) no-repeat,
+               url(../img/tabs-bg.png) repeat;
+  box-shadow: 0 5px 10px 0 #34495e;
 }
 .tabs__content.active {
   display: block;
