--- a/source/template/common/_clients.pug
+++ b/source/template/common/_clients.pug
@@ -1,3 +1,20 @@
-section.clients
+section.clients#clients
   .clients__wrap.container
     h3.clients__title Наши клиенты
+    .slider
+      .slider__item.slider__item--clients
+        a.slide__client-item.slide__client-1(href="#")
+        a.slide__client-item.slide__client-2(href="#")
+        a.slide__client-item.slide__client-3(href="#")
+        a.slide__client-item.slide__client-4(href="#")
+        a.slide__client-item.slide__client-5(href="#")
+        a.slide__client-item.slide__client-6(href="#")
+        a.slide__client-item.slide__client-7(href="#")
+        a.slide__client-item.slide__client-8(href="#")
+        a.slide__client-item.slide__client-9(href="#")
+        a.slide__client-item.slide__client-10(href="#")
+        a.slide__client-item.slide__client-11(href="#")
+        a.slide__client-item.slide__client-12(href="#")
+        a.slide__client-item.slide__client-13(href="#")
+        a.slide__client-item.slide__client-14(href="#")
+        a.slide__client-item.slide__client-15(href="#")
