--- a/source/template/common/_features.pug
+++ b/source/template/common/_features.pug
@@ -3,19 +3,19 @@ section.features
     h3.features__title Преимущества
     ul.features__items
       li.feature
-        .feature__icon
+        .feature__icon.sprite.sprite-experience
         h4.feature__title Опыт
         p.feature__text Более 10 лет в промышленной безопасности
       li.feature
-        .feature__icon
+        .feature__icon.sprite.sprite-professionals
         h4.feature__title Профессионализм
         p.feature__text Эксперты 1 категории в области промышленной безопасности
       li.feature
-        .feature__icon
+        .feature__icon.sprite.sprite-quality
         h4.feature__title Качество
         p.feature__text Лицензии, Сертификаты и допуски СРО
       li.feature
-        .feature__icon
+        .feature__icon.sprite.sprite-base
         h4.feature__title База
         p.feature__text Квалифицированные специалисты и оборудованная лаборатория
 
