--- a/source/template/common/_contacts.pug
+++ b/source/template/common/_contacts.pug
@@ -1,17 +1,17 @@
 section.contacts#contacts
   .contacts__wrap.container
     .contacts__item
-      .contacts__icon
+      .contacts__icon.contacts__icon--address
       h4.contacts__title Наш адрес:
       p.contacts__text 117587, г.Москва,<br> Варшавское шоссе, д.125
       p.contacts__text Филиал:<br> 300026, г.Тула, Тимирязева, д. 99Б.
 
     .contacts__item
-      .contacts__icon
+      .contacts__icon.contacts__icon--mail
       h4.contacts__title Наша почта:
       a.contacts__email(href="mailto:bezis@mail.ru") bezis@mail.ru
 
     .contacts__item
-      .contacts__icon
+      .contacts__icon.contacts__icon--phone
       h4.contacts__title Наш телефон:
       a.contacts__email.contacts__email--bold(href="tel: +74872701562") +7(4872) 70-15-62
